--- a/style.css
+++ b/style.css
@@ -1,8 +1,45 @@
-@import url(".git/branches/style.css");
-
+@charset "UTF-8";
 /* CSS Document */
-
 body{
 	background-color:rgb(255,255,255);
-	margin-top: auto;
+	margin-top:0;
+	padding:0;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif"
+	
+}
+
+header{
+	width: 100%;
+	padding:40px 0;	
+	color:white;
+	text-align:center;	
+}
+
+nav ul{
+	list-style-type: none;
+	margin:0;
+	padding:0;
+	overflow:hidden;
+	background-color: black;
+	coloe:white;
+	text-align: center;
+	
+}
+
+
+nav ul li  {
+	display:inline-block;
+	color:orange;
+	text-align:center;
+	padding:20px;
+	text-decoration:none;	
+}
+
+a:hover:not(.active) {
+	background-color: black;
+	
+}
+
+.active{
+	background-color:coral;
 }
